[workspace]
resolver = "3"
members = [ "rusty-acse", "rusty-copp", "rusty-cosp", "rusty-cotp", "rusty-iccp", "rusty-mms", "rusty-mms-service", "rusty-tpkt"]

[workspace.package]
authors = ["Graeme Farquharson"]
version = "0.6.0"
edition = "2024"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/gazzasaur/rusty-iccp"
repository = "https://github.com/gazzasaur/rusty-iccp"

[workspace.dependencies]
rusty-mms-service = { path = "./rusty-mms-service", version = "0.6.0" }
rusty-mms = { path = "./rusty-mms", version = "0.6.0" }
rusty-acse = { path = "./rusty-acse", version = "0.6.0" }
rusty-copp = { path = "./rusty-copp", version = "0.6.0" }
rusty-cosp = { path = "./rusty-cosp", version = "0.6.0" }
rusty-cotp = { path = "./rusty-cotp", version = "0.6.0" }
rusty-tpkt = { path = "./rusty-tpkt", version = "0.6.0" }

rand = "0.9"
bytes = "1.10"
chrono = "0.4"
futures = "0.3"
tracing = "0.1"
dyn-clone = "1.0"
bitfield = "0.19"
thiserror = "2.0"
num-derive = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
async-trait = "0.1"
num-bigfloat = "1.7"
tokio = { version = "1.47", features = ["full"] }
strum = { version = "0.27", features = ["derive"] }
der-parser = { version = "10.0", features = ["bigint", "serialize"] }

# Testing Only
hex = "0.4"
anyhow = "1.0"
tracing-test = "0.2"
