[package]
name = "rusty-acse"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Implements the Application Control Service Element (ACSE)/ISO 8650-1/IEC 8650-1/ITU-T X.227 standard targeting ISO protocol transport."
homepage = "https://github.com/gazzasaur/rusty-iccp"
repository = "https://github.com/gazzasaur/rusty-iccp"

[dependencies]
rusty-copp = { workspace = true }
rusty-cosp = { workspace = true }
rusty-cotp = { workspace = true }
rusty-tpkt = { workspace = true }

rand = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
der-parser = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tracing-test = { workspace = true }
