[package]
name = "rusty-copp"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Implements the Kernel Function of Connection Oriented Presentation Protocol/ISO 8823-1/IEC 8823-1/ITU-T X.226 standard."
homepage = "https://github.com/gazzasaur/rusty-iccp"
repository = "https://github.com/gazzasaur/rusty-iccp"

[dependencies]
rusty-cosp = { workspace = true }
rusty-cotp = { workspace = true }
rusty-tpkt = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
der-parser = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
anyhow = { workspace = true }
tracing-test = { workspace = true }
