[package]
name = "rusty-copp"
description = "Implements the Kernel Function of Connection Oriented Presentation Protocol/ISO 8823-1/IEC 8823-1/ITU-T X.226 standard."

authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
rusty-cosp = { workspace = true }
rusty-cotp = { workspace = true }
rusty-tpkt = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
der-parser = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
anyhow = { workspace = true }
tracing-test = { workspace = true }
