[package]
name = "rusty-cosp"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Implements the Kernel Function of Connection Oriented Session Protocol/ISO 8327-1/IEC 8327-1/ITU-T X.225 standard."
homepage = "https://github.com/gazzasaur/rusty-iccp"
repository = "https://github.com/gazzasaur/rusty-iccp"

[dependencies]
rusty-cotp = { path = "../rusty-cotp", version = "0.1.0" }
rusty-tpkt = { path = "../rusty-tpkt", version = "0.1.0" }

rand = "0.9.2"
bytes = "1.10.1"
tracing = "0.1.41"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
num-derive = "0.4.2"
bitfield = "0.19.1"
strum = { version = "0.27.2", features = ["derive"] }
hex = "0.4.3"

[dev-dependencies]
hex = "0.4.3"
anyhow = "1.0.98"
tracing-test = "0.2.5"
