[package]
name = "rusty-cosp"
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Implements the Kernel Function of Connection Oriented Session Protocol/ISO 8327-1/IEC 8327-1/ITU-T X.225 standard."
homepage = "https://github.com/gazzasaur/rusty-iccp"
repository = "https://github.com/gazzasaur/rusty-iccp"

[dependencies]
rusty-cotp = { workspace = true }
rusty-tpkt = { workspace = true }

rand = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
bitfield = { workspace = true }
thiserror = { workspace = true }
num-derive = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
anyhow = { workspace = true }
tracing-test = { workspace = true }
