[package]
name = "rusty-cosp"
description = "Implements the Kernel Function of Connection Oriented Session Protocol/ISO 8327-1/IEC 8327-1/ITU-T X.225 standard."

version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
rusty-cotp = { workspace = true }
rusty-tpkt = { workspace = true }

rand = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
bitfield = { workspace = true }
thiserror = { workspace = true }
num-derive = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
anyhow = { workspace = true }
tracing-test = { workspace = true }
