[package]
name = "rusty-cotp"
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Implements the Kernel Function of Connection Oriented Transport Protocol/ISO 8073/IEC 8073/ITU-T X.224 standard."
homepage = "https://github.com/gazzasaur/rusty-iccp"
repository = "https://github.com/gazzasaur/rusty-iccp"

[dependencies]
rusty-tpkt = { workspace = true }

rand = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
anyhow = { workspace = true }
tracing-test = { workspace = true }
