[package]
name = "rusty-cotp"
version = "1.1.0"
description = "Implements the Kernel Function of Connection Oriented Transport Protocol/ISO 8073/IEC 8073/ITU-T X.224 standard."

authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
rusty-tpkt = { workspace = true }

rand = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
anyhow = { workspace = true }
tracing-test = { workspace = true }
