[package]
name = "rusty-iccp"
description = "Implements the TASE.2/ISO 60870-3-503/IEC 60870-3-503/ICCP standard version 2000.8."

authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
rusty-mms-service = { workspace = true }
rusty-mms = { workspace = true }
rusty-acse = { workspace = true }
rusty-copp = { workspace = true }
rusty-cosp = { workspace = true }
rusty-cotp = { workspace = true }
rusty-tpkt = { workspace = true }

thiserror = { workspace = true }
num-bigint = { workspace = true }
async-trait = { workspace = true }
