[package]
name = "rusty-mms-service"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A high level service wrapper around the Manufacturing Message Specification (MMS)/ISO 9506/IEC 9506 provided by the rusty-mms crate."
homepage = "https://github.com/gazzasaur/rusty-iccp"
repository = "https://github.com/gazzasaur/rusty-iccp"

[dependencies]
rusty-mms = { workspace = true }
rusty-acse = { workspace = true }
rusty-copp = { workspace = true }
rusty-cosp = { workspace = true }
rusty-cotp = { workspace = true }
rusty-tpkt = { workspace = true }

rand = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
der-parser = { workspace = true }
num-bigint = { workspace = true }
async-trait = { workspace = true }
num-bigfloat = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tracing-test = { workspace = true }
