[package]
name = "rusty-mms-service"
description = "A high level service wrapper around the Manufacturing Message Specification (MMS)/ISO 9506/IEC 9506 provided by the rusty-mms crate."

authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
rusty-mms = { workspace = true }
rusty-acse = { workspace = true }
rusty-copp = { workspace = true }
rusty-cosp = { workspace = true }
rusty-cotp = { workspace = true }
rusty-tpkt = { workspace = true }

rand = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
dyn-clone = { workspace = true }
thiserror = { workspace = true }
der-parser = { workspace = true }
num-bigint = { workspace = true }
async-trait = { workspace = true }
num-bigfloat = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tracing-test = { workspace = true }
