[package]
name = "rusty-mms"
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Implements the Manufacturing Message Specification (MMS)/ISO 9506/IEC 9506. The operations supported in this package are those required for TASE2/ICCP."
homepage = "https://github.com/gazzasaur/rusty-iccp"
repository = "https://github.com/gazzasaur/rusty-iccp"

[dependencies]
rusty-acse = { workspace = true }
rusty-copp = { workspace = true }
rusty-cosp = { workspace = true }
rusty-cotp = { workspace = true }
rusty-tpkt = { workspace = true }

tokio ={ workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
der-parser = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
anyhow = { workspace = true }
tracing-test = { workspace = true }
