[package]
name = "rusty-mms"
description = "Implements the Manufacturing Message Specification (MMS)/ISO 9506/IEC 9506. The operations supported in this package are those required for TASE2/ICCP."

version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
rusty-acse = { workspace = true }
rusty-copp = { workspace = true }
rusty-cosp = { workspace = true }
rusty-cotp = { workspace = true }
rusty-tpkt = { workspace = true }

tokio ={ workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
der-parser = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
anyhow = { workspace = true }
tracing-test = { workspace = true }
