[package]
name = "rusty-tpkt"
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Implements the TPKT standard to encapsulate ISO protocols for TCP transport."
homepage = "https://github.com/gazzasaur/rusty-iccp"
repository = "https://github.com/gazzasaur/rusty-iccp"

[dependencies]
bytes = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
anyhow = { workspace = true }
tracing-test = { workspace = true }
