[package]
name = "rusty-tpkt"
version = "1.0.0"
description = "Implements the TPKT standard to encapsulate ISO protocols for TCP transport."

authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
bytes = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dyn-clone = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
anyhow = { workspace = true }
tracing-test = { workspace = true }
